feat: 引入 renderer 脚本

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hello, this is my first electron app.</h1>
     <p id="info"></p>
+    <script src="./renderer.js"></script>
   </body>
 </html>
