--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h1>Hello, this is my first electron app.</h1>
     <p id="info"></p>
-    <script src="./renderer.js"></script>
+    <!-- <p>
+      We are using Node.js <span id="node-version"></span>, Chromium
+      <span id="chrome-version"></span>, and Electron
+      <span id="electron-version"></span>.
+    </p> -->
   </body>
+  <script src="./renderer.js"></script>
 </html>
